# spe-mini-scie-calc

./: .dockerignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  readme.md  terminal-history  terminal-main-history.txt
REPORT_MT2025117/: MT2025117_Report.tex
REPORT_MT2025117/submission/: links.txt
ansible/: deploy.yml
src/: calculator.cpp  calculator.h  main.cpp
tests/: integration_test.exp  test_calculator.cpp
